#63 scrollbar fix

--- a/client/src/static/style/App.css
+++ b/client/src/static/style/App.css
@@ -272,6 +272,7 @@ input .search-query {
 #comment-list ul {
   list-style: none;
   padding: 0;
+  max-width: 96%;
 }
 
 #comment-list li {
